WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194613
Null-deref crash at SourceBufferPrivateAVFObjC::outputObscuredDueToInsufficientExternalProtectionChanged()
https://bugs.webkit.org/show_bug.cgi?id=194613
Summary
Null-deref crash at SourceBufferPrivateAVFObjC::outputObscuredDueToInsufficie...
Jer Noble
Reported
2019-02-13 14:41:06 PST
Null-deref crash at SourceBufferPrivateAVFObjC::outputObscuredDueToInsufficientExternalProtectionChanged()
Attachments
Patch
(1.79 KB, patch)
2019-02-13 14:42 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-02-13 14:41:32 PST
<
rdar://problem/48023912
>
Jer Noble
Comment 2
2019-02-13 14:42:31 PST
Created
attachment 361940
[details]
Patch
WebKit Commit Bot
Comment 3
2019-02-13 14:59:14 PST
Comment on
attachment 361940
[details]
Patch Clearing flags on attachment: 361940 Committed
r241479
: <
https://trac.webkit.org/changeset/241479
>
WebKit Commit Bot
Comment 4
2019-02-13 14:59:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug